@@ -1,3 +1,6 @@
+[B]1.3.2[/B]
+- Added try/except block for inputstream adaptive
+
 [B]1.3.1[/B]
 - Replaced json method for getting xbmc.python version to infolabel
 
